# GodotMultiplayerProject

./: README.md
Client/: TODO.txt  export_presets.cfg  icon.png.import  icon.svg.import  project.godot
Client/Resources/: button-hover.tres  button-normal.tres  button-pressed.tres  kloppenheim_06_puresky_4k.exr.import  terrainMaterial.tres  terrainTextureList.tres
Client/Scenes/: authentication.tscn  defaultLobbyListItem.tscn  lobbyListItem.tscn  lobbyMenu.tscn  main.tscn  mainMenu.tscn  pla35C1.tmp  playZone.tscn  player.tscn  popUp.tscn
Client/Src/: authentication.gd  camera.gd  client.gd  defaultLobbyListItem.gd  lobbyMenu.gd  mainMenu.gd  packet.gd  packetDispatcher.gd  packetHandler.gd  packetIn.gd  packetOut.gd  player.gd  popUp.gd  prot.gd  protocol.gd  user.gd  (+1 more)
Server/: icon.svg.import  project.godot
Server_cpp/: .gitignore  CMakeLists.txt  Server.cpp  Server.sln  Server.vcxproj  Server.vcxproj.filters  TODO.txt
Server_cpp/Include/: application.h  client.h  clientDistributor.h  clientInfo.h  connectionManager.h  eventDistributor.h  handlerHelper.h  handlerID.h  host.h  ihandler.h  libHandler.h  librarian.h  lobby.h  lobbyHandler.h  lobbyInfo.h  locator.h  packet.h  packetDispatcher.h  parser.h  protocol.h  safeVector.h  servInfo.h  server.h
Server_cpp/Src/: application.cpp  client.cpp  clientDistributor.cpp  eventDistributor.cpp  handlerHelper.cpp  handlerIDContainer.cpp  host.cpp  ihandler.cpp  libHandler.cpp  librarian.cpp  lobby.cpp  lobbyHandler.cpp  lobbyInfo.cpp  locator.cpp  main.cpp  packet.cpp  packetDispatcher.cpp  parser.cpp  server.cpp
(+168 files in other folders)
